--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/**/*.ts": {
-      "runtime": "vercel-node@2.0.0"
+      "runtime": "nodejs18.x"
     }
   },
   "routes": [
