--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/**/*.ts": {
-      "runtime": "nodejs@v25"
+      "runtime": "nodejs@25.0.0"
     }
   },
   "routes": [
